# Cassandra

./: .gitignore  Cargo.toml  README.md  plot_results.py
cli_application/: Cargo.toml
cli_application/src/: main.rs
docs/: ACTION_PLAN.md  ARCHITECTURE.md  REPORT.md
input_test_files/: ground_truth.json
input_test_files/benign/: perf_100kb.html  perf_10kb.html  perf_1mb.html
input_test_files/malicious/: broadened_urls.html  idn_only.html  ssrf_attempt.html  unicode_confusion.html  untrusted_origins.html  xml_bomb.html
policies/: default.toml  default_policy.json  default_policy.toml  test.toml  test_idn_error.toml
sanitizer_engine/: Cargo.toml
sanitizer_engine/src/: crawl_session.rs  engine_structs.rs  errors.rs  html.rs  http_client.rs  lib.rs  log.rs  policy.rs  rules.rs  url.rs
sanitizer_engine/src/resources/: css.rs  entities.rs  images.rs  javascript.rs  mime.rs  mod.rs  pdf.rs  xml.rs
sanitizer_engine/src/rules/: generic.rs  mod.rs
src/: crawl_session.rs  errors.rs  html.rs  http_client.rs  lib.rs  log.rs  main.rs  policy.rs  rules.rs
src/cli_application/: cli.rs  http_client.rs
src/resources/: css.rs  javascript.rs  mod.rs
src/sanitizer_engine/: crawl_session.rs  engine_structs.rs  errors.rs  html.rs  log.rs  mod.rs  policy.rs
