[package]
name = "cli_application"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
url = { version = "2.5.8", features = ["serde"] }
walkdir = "2.5.0"
web_sanitizer_sysprog = { path = "../sanitizer_engine" }
